UI: Fix Alignment of Dark Mode Button for Screens Below 800px

--- a/client/styles.css
+++ b/client/styles.css
@@ -58,44 +58,11 @@
   transform: translateX(50px);
 } */
 
-.links .toggle {
-  height: 100%;
+.elemContainer{
   display: flex;
   align-items: center;
-
-}
-
-label {
-  width: 80px;
-  height: 60%;
-  top: 0;
-  position: relative;
-  display: block;
-  background: transparent;
-  border-radius: 20px;
-  border: 2px solid white;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-label:after {
-  content: "";
-  width: 35px;
-  height: 100%;
-  position: absolute;
-  background: white;
-  border-radius: 20px;
-  transition: 0.3s;
-}
-
-input {
-  width: 0;
-  height: 0;
-  display: none;
-}
-
-label:active::after {
-  width: 30px;
+  margin: 0 3rem;
+  gap: 1rem;
 }
 
 .background {
@@ -144,7 +111,7 @@ body {
 header {
   background-color: rgb(18, 38, 64);
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   position: relative;
 }
 
@@ -181,6 +148,7 @@ header .links {
   position: absolute;
   top: 10vh;
   width: 100%;
+  right: 0;
   background-color: rgb(18, 38, 64);
 }
 
@@ -193,6 +161,7 @@ header .toggle-links {
   padding-left: 1.3rem;
   display: block;
   height: 100%;
+  width: 100%;
   color: white;
   text-decoration: none;
   font-size: 15px;
@@ -498,7 +467,7 @@ footer .creator {
     font-size: 20px;
   }
 
-  .title-container .hamburger {
+  .elemContainer .hamburger {
     display: none;
   }
 
@@ -507,7 +476,7 @@ footer .creator {
     flex-direction: row;
     border-top: 0;
     height: 10vh;
-    margin-right: 1rem;
+    margin-right: 6rem;
     top: 0;
     right: 0;
     width: auto;
@@ -643,7 +612,7 @@ footer .creator {
   }
 
   header .links {
-    margin-right: 2rem;
+    margin-right: 6rem;
   }
 
   .intro .intro-title {
@@ -708,6 +677,14 @@ footer .creator {
 
   footer .creator {
     font-size: 17px;
+  }
+}
+
+@media (max-width: 767px) {
+  .themeBody {
+    margin: 0 2rem;
+    right: 3rem;
+    height: 100%;
   }
 }
 
